<resources>
    <string name="app_name">Money Monocle</string>
    <string name="no_internet">No internet</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password">Password</string>
    <string name="password_not_long_enough">Password must contain at least 8 symbols</string>
    <string name="password_not_enough_digits">Password must contain at least 1 digit</string>
    <string name="password_not_enough_uppercase">Password must contain at least 1 uppercase letter</string>
    <string name="username">Username</string>
    <string name="username_not_long_enough">Username must contain at least 1 symbol</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="go_to_signup">Go to sign up</string>
    <string name="go_to_signin">Go to sign in</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="manage_categories">Manage categories</string>
    <string name="account_does_not_exist">Account with that email does not exist</string>
    <string name="couldnt_sign_in">Could not sign in</string>
    <string name="error_snackbar">Error Snackbar</string>
...
